--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "fs": "0.0.1-security",
     "fs-extra": "^9.1.0",
     "ganache-cli": "^6.0.3",
     "mocha": "^4.1.0",
